--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
     "dayjs": "^1.11.13",
     "eslint": "8.57.0",
@@ -22,6 +23,7 @@
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
