--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "simplebar-react": "^3.2.6",
     "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.11",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.5.0",
     "web-vitals": "^2.1.4"
