--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.5",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "dayjs": "^1.11.13",
     "eslint": "8.57.0",
     "eslint-plugin-import": "^2.30.0",
@@ -35,6 +36,7 @@
     "ts-jest": "^29.2.5",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.5.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "browserslist": {
