--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "bun run jest",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
