--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
+    "@mui/x-date-pickers": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,11 +18,13 @@
     "@types/react": "^18.3.5",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "dayjs": "^1.11.13",
     "eslint": "8.57.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
@@ -30,8 +33,10 @@
     "simplebar-react": "^3.2.6",
     "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.11",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.5.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "browserslist": {
@@ -56,7 +61,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "bun run jest",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
