--- a/fastapi_old/Dockerfile
+++ b/fastapi_old/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.12-slim
 
-COPY app /app
 WORKDIR /app
 
 RUN apt-get update && apt install build-essential -y
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+COPY main.py .
 
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
